--- a/templates/borne/question.html.twig
+++ b/templates/borne/question.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+{{ include('borne/_timer.html.twig') }}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 
