--- a/templates/back_office/index.html.twig
+++ b/templates/back_office/index.html.twig
@@ -1,27 +1,62 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BackOfficeController!{% endblock %}
+{% block title %}Hello BackOfficeController!
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper{margin:1em auto;max-width:800px;width:95%;font:18px / 1.5 sans-serif}
+		.example-wrapper code{background:#F5F5F5;padding:2px 6px}
+		.table{width:100%;border-collapse:collapse}
+		.table th,
+		.table td{border:1px solid #000;padding:8px;text-align:left}
+		.xs{width:50px}
+		.no-border{border:none}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="example-wrapper">
+		<h1>Hello
+			{{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>C:/Users/nkolo/Desktop/CDUI/!Sablotins/ChasseSablotins/src/Controller/BackOfficeController.php</code></li>
-        <li>Your template at <code>C:/Users/nkolo/Desktop/CDUI/!Sablotins/ChasseSablotins/templates/back_office/index.html.twig</code></li>
-    </ul>
-    {{ dump(mot_du_jour) }}
-    <p> Mot du jour : {{ mot_du_jour ? mot_du_jour.mot : 'Aucun mot défini' }}</p>
-    <form action="{{ path('app_back_office_modif_mot') }}" method="POST">
-        <label for="mot">Modifier le mot du jour :</label>
-        <input type="text" id="mot" name="mot" value="{{ mot_du_jour ? mot_du_jour.mot : '' }}">
-        <button type="submit">Modifier</button>
-    </form>
-</div>
+		This friendly message is coming from:
+		<ul>
+			<li>Your controller at
+				<code>C:/Users/nkolo/Desktop/CDUI/!Sablotins/ChasseSablotins/src/Controller/BackOfficeController.php</code>
+			</li>
+			<li>Your template at
+				<code>C:/Users/nkolo/Desktop/CDUI/!Sablotins/ChasseSablotins/templates/back_office/index.html.twig</code>
+			</li>
+		</ul>
+		{{ dump(mot_du_jour) }}
+		<p>
+			Mot du jour :
+			{{ mot_du_jour ? mot_du_jour.mot : 'Aucun mot défini' }}</p>
+		<form action="{{ path('app_back_office_modif_mot') }}" method="POST">
+			<label for="mot">Modifier le mot du jour :</label>
+			<input type="text" id="mot" name="mot" value="{{ mot_du_jour ? mot_du_jour.mot : '' }}">
+			<button type="submit">Modifier</button>
+		</form>
+		{{ dump(questions) }}
+		<p>Questions :</p>
+		<table class="table">
+			<tr>
+				<th>Question</th>
+				<th>Réponse</th>
+				<th class="xs">Nombre</th>
+			</tr>
+			{% for question in questions %}
+				<tr>
+					<form action="{{ path('app_back_office_modif_question', {'id': question.id}) }}" method="POST">
+						<td>{{ question.question }}</td>
+						<td>{{ question.reponse }}</td>
+						<td class="xs">{{ question.nombre }}</td>
+						<td class="xs no-border">
+							<button type="submit">Modifier</button>
+							<a href="{{ path('app_back_office_delete_question', {'id': question.id}) }}">Supprimer</a>
+						</td>
+					</form>
+				</tr>
+			{% endfor %}
+		</table>
+	</div>
 {% endblock %}
