--- a/templates/telephone/index.html.twig
+++ b/templates/telephone/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Chasse au trésor Sablotins{% endblock %}
+
 {% block body %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
