--- a/templates/questions/question.html.twig
+++ b/templates/questions/question.html.twig
@@ -10,7 +10,7 @@
         position: fixed;
         top: 0;
         left: 0;
-        padding: 2rem;
+        padding: 1rem;
         background-color: #FFE5F1;
         background-image: 
             radial-gradient(circle at 25% 25%, #FFB6C1 5%, transparent 10%),
@@ -94,7 +94,7 @@
 
 <div class="question-container">
     <div class="question-content">
-        <h1 class="question-title">❓ Question ❓</h1>
+        <h1 class="question-title">❓ Question</h1>
         <div class="question-text">
             {{ question.question }}
         </div>
