correc marges mobile

--- a/templates/questions/question.html.twig
+++ b/templates/questions/question.html.twig
@@ -5,11 +5,8 @@
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 
     .question-container {
-        height: 100vh;
+        min-height: 100vh;
         width: 100vw;
-        position: fixed;
-        top: 0;
-        left: 0;
         padding: 1rem;
         background-color: #FFE5F1;
         background-image: 
