--- a/templates/telephone/success.html.twig
+++ b/templates/telephone/success.html.twig
@@ -18,7 +18,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 100vh;
+        min-height: 100vh;
         text-align: center;
         position: relative;
         background-color: #FFE5F1;
