--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -11,7 +11,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 100vh;
+        min-height: 100vh;
     }
     .grid-container {
         display: grid;
