--- a/templates/telephone/index.html.twig
+++ b/templates/telephone/index.html.twig
@@ -7,12 +7,9 @@
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
 
     .phone-container {
-        height: 100vh;
+        min-height: 100vh;
         width: 100vw;
-        position: fixed;
-        top: 0;
-        left: 0;
-        padding: 2rem;
+        padding: 1rem;
         background-color: #E0F7FA;
         background-image: 
             radial-gradient(circle at 15% 15%, #FFD54F 3%, transparent 8%),
