auto select back camera

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,25 +23,25 @@
             }
             
             /* Tablettes */
-            @media screen and (max-width: 768px) {
+            /* @media screen and (max-width: 768px) {
                 html {
                     font-size: 18px;
                 }
-            }
+            } */
 
             /* Mobiles */
-            @media screen and (max-width: 480px) {
+            /* @media screen and (max-width: 480px) {
                 html {
                     font-size: 20px;
                 }
-            }
+            } */
 
             /* Petits mobiles */
-            @media screen and (max-width: 320px) {
+            /* @media screen and (max-width: 320px) {
                 html {
                     font-size: 22px;
                 }
-            }
+            } */
         </style>
         {% endblock %}
 
