--- a/templates/questions/question.html.twig
+++ b/templates/questions/question.html.twig
@@ -1,5 +1,10 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('styles/qrcodereader.css') }}">
+{% endblock %}
+
 {% block body %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
@@ -61,6 +66,7 @@
     }
 
     .button {
+        width: 100%;
         font-size: 2rem;
         font-family: 'Comic Neue', cursive;
         font-weight: bold;
