--- a/templates/telephone/index.html.twig
+++ b/templates/telephone/index.html.twig
@@ -1,7 +1,10 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Chasse au trésor Sablotins{% endblock %}
-
+{% block stylesheets %}
+    {{ parent() }}
+    <link rel="stylesheet" href="{{ asset('styles/qrcodereader.css') }}">
+{% endblock %}
 {% block body %}
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap');
